# ghostty-android-terminal

./: .gitignore  CLAUDE.md  NOTICE  README.md  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle
app/src/androidTest/java/dev/androidterm/: DebianSessionTest.java  EmulatorVtTest.java  ShellSessionTest.java  TerminalUiTest.java  TestUtil.java
app/src/androidTest/java/sh/easycli/proot/: DebianSessionTest.java  EmulatorVtTest.java  ShellSessionTest.java  TerminalUiTest.java  TestUtil.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  kitty_unicode.c  kitty_unicode.h  png_decode.c  png_decode.h  pty_jni.c  terminal_jni.c
app/src/main/java/dev/androidterm/term/: DebianRootfs.java  ScreenSnapshot.java  SessionCommand.java  SessionManager.java  SessionService.java  TerminalEmulator.java  TerminalNative.java  TerminalSession.java
app/src/main/java/dev/androidterm/ui/: AppSettings.java  ExtraKeysView.java  MainActivity.java  Setting.java  SettingsDialog.java  TabStripView.java  TerminalView.java
app/src/main/java/sh/easycli/proot/term/: DebianRootfs.java  ScreenSnapshot.java  SessionCommand.java  SessionManager.java  SessionService.java  TerminalEmulator.java  TerminalNative.java  TerminalSession.java
app/src/main/java/sh/easycli/proot/ui/: AppSettings.java  ExtraKeysView.java  MainActivity.java  Setting.java  SettingsDialog.java  TabStripView.java  TerminalView.java
app/src/main/res/drawable/: ic_launcher_fg.xml  ic_stat_terminal.xml
app/src/main/res/layout/: activity_main.xml  settings_row.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml
docs/: architecture.md  native-build.md  testing.md
native/proot/: ANDROID.md
native/proot/android/: build.h
native/proot/src/cli/: cli.c
native/proot/src/extension/ashmem_memfd/: ashmem_memfd.c
native/talloc/: replace.h
scripts/: build-debian-rootfs.sh  build-ghostty-vt.sh  fetch-ghostty.sh  gen-loader-info.sh  run-emulator.sh  setup-emulator.sh
